src/lib/snapshots/cviz__snapshot_tests__tests__two_typed_chain_ascii_handler_chain_no_types.snap
---
source: src/lib/snapshot_tests.rs
assertion_line: 272
expression: "ascii_snap(&two_typed_chain_graph(), DetailLevel::HandlerChain, false)"
---
┌───────────────────────────────────┐
│          Service Chains           │
├───────────────────────────────────┤
│[Export: handler] ──> mw-http      │
│mw-http ── handler ──> srv-http    │
│                                   │
│[Export: store] ──> cache          │
│cache ── store ──> db              │
└───────────────────────────────────┘
