src/lib/snapshots/cviz__snapshot_tests__tests__two_typed_chain_mermaid_default_no_types.snap
---
source: src/lib/snapshot_tests.rs
expression: "mermaid_snap(&two_typed_chain_graph(), &GraphRenderOpts::default(), false)"
---
%%{init: {'flowchart': {'wrappingWidth': 2400}}}%%
graph LR
    classDef shared stroke-width:3px,stroke-dasharray:5 3

    subgraph sg_wasi_http_handler_0_3_0["export: handler"]
        n1["srv-http"]
        n2["mw-http"]
        ext_wasi_http_handler_0_3_0(["ext: handler"]) --> n2
        n2 -->|"handler"| n1
    end

    subgraph sg_wasi_keyvalue_store_0_1_0["export: store"]
        n3["db"]
        n4["cache"]
        ext_wasi_keyvalue_store_0_1_0(["ext: store"]) --> n4
        n4 -->|"store"| n3
    end
