src/lib/snapshots/cviz__snapshot_tests__tests__two_typed_chain_mermaid_handler_chain_no_types.snap
---
source: src/lib/snapshot_tests.rs
assertion_line: 394
expression: "mermaid_snap(&two_typed_chain_graph(), DetailLevel::HandlerChain, false)"
---
%%{init: {'flowchart': {'wrappingWidth': 2400}}}%%
graph LR
    subgraph composition["Service Chains"]
        mw_http["mw-http"]
        srv_http["srv-http"]
        cache["cache"]
        db["db"]
    end

    export_wasi_http_handler_0_3_0(["Export: handler"]) --> mw_http
    mw_http -->|"handler"| srv_http
    export_wasi_keyvalue_store_0_1_0(["Export: store"]) --> cache
    cache -->|"store"| db
