src/lib/snapshots/cviz__snapshot_tests__tests__typed_chain_ascii_all_interfaces_no_types.snap
---
source: src/lib/snapshot_tests.rs
expression: "ascii_snap(&typed_chain_graph(), DetailLevel::AllInterfaces, false)"
---
┌──────────────────┐
│   Host Imports   │
├──────────────────┤
│  {handler}       │
└──────────────────┘
┌─────────────────────────┐
│   Component Instances   │
├─────────────────────────┤
│  [srv]                  │
│  [middleware]           │
└─────────────────────────┘
┌────────────────────────────────────────┐
│              Connections               │
├────────────────────────────────────────┤
│  {handler} --- handler --> [srv]       │
│  [srv] ── handler ──> [middleware]     │
│  [middleware] ──> (Export: handler)    │
└────────────────────────────────────────┘
